Wed Dec 16 11:12:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver.idl:
        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
          Simplified receiver

Wed Dec 16 11:02:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/AMI:
          Renamed directory to connector

Wed Dec 16 10:36:31 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/SLDisabled/Receiver/SL_Disabled_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/SLDisabled/Sender/SL_Disabled_Sender_exec.cpp:
        * connectors/dds4ccm/tests/SLManyByMany/Receiver/SL_ManyByMany_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/SLManyByMany/Sender/SL_ManyByMany_Sender_exec.cpp:
        * connectors/dds4ccm/tests/SLOneByOne/Receiver/SL_OneByOne_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/SLOneByOne/Sender/SL_OneByOne_Sender_exec.cpp:
        * connectors/dds4ccm/tests/SLOneByOne/Sender/SL_OneByOne_Sender_exec.h:
        * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver_exec.h:
        * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender_exec.cpp:
         Cleanup tests, check returned readers, data, info and status.

Wed Dec 16 09:32:33 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/examples/Hello/descriptors/Plan.cdp:
          Resolved errors due to renaming namespaces.

Wed Dec 16 09:04:31 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        *connectors/dds4ccm/tests/PSLDeadline/Connector/PSL_DeadlineTest_Connector_exec.cpp:
        *connectors/dds4ccm/tests/PSLDeadline/Connector/PSL_DeadlineTest_Connector_exec.h: