@@ -13,6 +13,7 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::Getter_T (void) :
    time_out_ (),
    max_delivered_data_ (0),
    gd_ (0),
+   ws_ (0),
    rd_condition_ (0)
 {
   CIAO_TRACE ("CIAO::DDS4CCM::RTI::Getter_T::Getter_T");
@@ -23,6 +24,7 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::~Getter_T (void)
 {
   CIAO_TRACE ("CIAO::DDS4CCM::RTI::Getter_T::~Getter_T");
   delete gd_;
+  delete ws_;
 }
 
 template <typename DDS_TYPE, typename CCM_TYPE>
@@ -42,36 +44,17 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::impl (void)
 template <typename DDS_TYPE, typename CCM_TYPE >
 bool
 CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::wait (
-          DDSWaitSet* ws,
           DDSConditionSeq& active_conditions)
 {
   DDS_Duration_t timeout;
   timeout <<= this->time_out_;
-  DDS_ReturnCode_t const retcode = ws->wait (active_conditions, timeout);
+  DDS_ReturnCode_t const retcode = ws_->wait (active_conditions, timeout);
   if (retcode == DDS_RETCODE_TIMEOUT)
     {
       CIAO_DEBUG ((LM_DEBUG, ACE_TEXT ("Getter: No data available after timeout.\n")));
       return false;
     }
   return true;
-}
-
-template <typename DDS_TYPE, typename CCM_TYPE >
-void
-CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::configure_waitset (DDSWaitSet* ws)
-{
-  DDS_ReturnCode_t retcode = ws->attach_condition (gd_);
-  if (retcode != DDS_RETCODE_OK)
-    {
-      CIAO_ERROR ((LM_ERROR, CLINFO "GETTER: Unable to attach guard condition to waitset.\n"));
-      throw CCM_DDS::InternalError (retcode, 0);
-    }
-  retcode = ws->attach_condition (rd_condition_);
-  if (retcode != DDS_RETCODE_OK)
-    {
-      CIAO_ERROR ((LM_ERROR, CLINFO "GETTER: Unable to attach read condition to waitset.\n"));
-      throw CCM_DDS::InternalError (retcode, 1);
-    }
 }
 
 template <typename DDS_TYPE, typename CCM_TYPE >
@@ -83,15 +66,9 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::get_many (
   instances = new typename CCM_TYPE::seq_type;
   infos = new ::CCM_DDS::ReadInfoSeq;
 
-//  DDS_WaitSetProperty_t wsp;
-//  wsp.max_event_count = this->max_delivered_data_;
-  DDSWaitSet* ws = new DDSWaitSet ();
-  configure_waitset (ws);
-
   DDSConditionSeq active_conditions;
-  if (!this->wait (ws, active_conditions))
+  if (!this->wait (active_conditions))
     {
-      delete ws;
       return false;
     }
 
@@ -160,7 +137,6 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::get_many (
                     "Error while reading from DDS: <%C>\n",
                     translate_retcode (retcode)));
               this->impl ()->return_loan(data,sample_info);
-              delete ws;
               throw CCM_DDS::InternalError (retcode, 1);
             }
 
@@ -172,7 +148,6 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::get_many (
             }
         }
     }
-  delete ws;
   return true;
 }
 
@@ -184,11 +159,8 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::get_one (
 {
   an_instance = new typename DDS_TYPE::value_type;
 
-  DDSWaitSet* ws = new DDSWaitSet ();
-  configure_waitset (ws);
-
   DDSConditionSeq active_conditions;
-  if (!this->wait (ws, active_conditions))
+  if (!this->wait (active_conditions))
     return false;
 
   DDS_SampleInfoSeq sample_info;
@@ -228,7 +200,6 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::get_one (
                     "Error while reading from DDS: <%C>\n",
                     translate_retcode (retcode)));
               this->impl ()->return_loan(data,sample_info);
-              delete ws;
               throw CCM_DDS::InternalError (retcode, 1);
             }
 
@@ -241,7 +212,6 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::get_one (
             }
         }
     }
-  delete ws;
   return true;
 }
 
@@ -287,6 +257,8 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::data_reader (
       impl_ = 0;
       delete gd_;
       gd_ = 0;
+      delete ws_;
+      ws_ = 0;
     }
   else
     {
@@ -310,9 +282,22 @@ CIAO::DDS4CCM::RTI::Getter_T<DDS_TYPE, CCM_TYPE>::data_reader (
 
       // Now create the waitset conditions
       gd_ = new DDSGuardCondition ();
+      ws_ = new DDSWaitSet ();
       rd_condition_ = this->impl_->create_readcondition (DDS_NOT_READ_SAMPLE_STATE,
                                                          DDS_NEW_VIEW_STATE | DDS_NOT_NEW_VIEW_STATE,
                                                          DDS_ALIVE_INSTANCE_STATE | DDS_NOT_ALIVE_INSTANCE_STATE);
+      DDS_ReturnCode_t retcode = ws_->attach_condition (gd_);
+      if (retcode != DDS_RETCODE_OK)
+        {
+          CIAO_ERROR ((LM_ERROR, CLINFO "GETTER: Unable to attach guard condition to waitset.\n"));
+          throw CCM_DDS::InternalError (retcode, 0);
+        }
+      retcode = ws_->attach_condition (rd_condition_);
+      if (retcode != DDS_RETCODE_OK)
+        {
+          CIAO_ERROR ((LM_ERROR, CLINFO "GETTER: Unable to attach read condition to waitset.\n"));
+          throw CCM_DDS::InternalError (retcode, 1);
+        }
     }
 }
 
